--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID=244542591915-b4pf9mtkn2f5n7ahcn8qd4m8vqus8in1.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URI=mongodb+srv://promtopia:Kingsking@cluster0.jbollon.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=1GeBMrlBzJ+wHGvoUvmuQ1EiY/4gVFpChHewkKzvkQU=
